ACCUMULO-2292 Massive amount of fixes for findbugs warnings.
The strong majority of these changes are all UTF8 related. The rest are split up between
using Long.valueOf and Integer.valueOf, Map.entrySet() instead of Map.keySet(),
unnecessary String creation/concatenation, and useless conditionals.